--- a/PSO2 Tweaker/PSO2 Tweaker.vbproj
+++ b/PSO2 Tweaker/PSO2 Tweaker.vbproj
@@ -15,7 +15,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
-    <PublishUrl>C:\Dropbox\Public\PSO2Tweaker\</PublishUrl>
+    <PublishUrl>C:\Users\chris\Dropbox\PSO2Tweaker\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -83,7 +83,7 @@
     <ManifestKeyFile>PSO2 Tweaker_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>false</GenerateManifests>
+    <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
